// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component NtroFields should not show NTRO data card in the Ntro fields 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Creator research statement
            </h3>
            <p>
              For more information about the research statement, click  
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "Author/Creator research statement",
        }
      }
      title="Author/Creator research statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Typography)>
            Select the option that best describes the significance of the work.
          </WithStyles(Typography)>
          <Field
            SelectDisplayProps={
              Object {
                "id": "significance",
              }
            }
            component={[Function]}
            disabled={false}
            label={
              <span>
                Scale/Significance of work* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            name="significance"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="454027"
              value={454027}
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="454026"
              value={454026}
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Grant details"
    >
      <Field
        component={[Function]}
        disableDeleteAllGrants={false}
        disabled={false}
        name="grants"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`Component NtroFields should render all fields as disabled 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Creator research statement
            </h3>
            <p>
              For more information about the research statement, click  
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "Author/Creator research statement",
        }
      }
      title="Author/Creator research statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Typography)>
            Select the option that best describes the significance of the work.
          </WithStyles(Typography)>
          <Field
            SelectDisplayProps={
              Object {
                "id": "significance",
              }
            }
            component={[Function]}
            disabled={true}
            label={
              <span>
                Scale/Significance of work* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            name="significance"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="454027"
              value={454027}
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="454026"
              value={454026}
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginTop": 24,
            }
          }
          xs={12}
        >
          <Field
            component={[Function]}
            description="Remember to include substantiation of your major or minor scale/significance claim above."
            disabled={true}
            fullWidth={true}
            maxValue={2000}
            name="impactStatement"
            required={true}
            title={
              <span>
                Creator research statement*. Include Background, Contribution and Significance 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Quality indicators
            </h3>
            <p>
              For more information about each quality indicator option, click 
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836609"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "NTRO data",
        }
      }
      title="NTRO data"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            description="Enter a brief description of the work"
            disabled={true}
            fullWidth={true}
            maxValue={800}
            name="ntroAbstract"
            title={
              <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "Enter ISMN, e.g. 9790720208015",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            inputNormalizer={[Function]}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "Enter ISRC, e.g. US6R21320619",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            floatingLabelText="Series"
            hintText="Enter the name of publication, performance, recording, or event series"
            name="fez_record_search_key_series.rek_series"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Volume"
            name="fez_record_search_key_volume_number.rek_volume_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Issue"
            name="fez_record_search_key_issue_number.rek_issue_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Start page"
            name="fez_record_search_key_start_page.rek_start_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="End page"
            name="fez_record_search_key_end_page.rek_end_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            id="rek-total-pages"
            label="Total pages/Extent"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            fullWidth={true}
            label="Physical description"
            name="fez_record_search_key_original_format.rek_original_format"
            placeholder="Building, Exhibition, Performance, Composition"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            SelectDisplayProps={
              Object {
                "id": "rek-audience-size",
              }
            }
            component={[Function]}
            disabled={true}
            label="Audience size"
            name="fez_record_search_key_audience_size.rek_audience_size"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="453992"
              value={453992}
            >
              Less than 100
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453993"
              value={453993}
            >
              100 - 500
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453994"
              value={453994}
            >
              Greater than 500
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            label="Language"
            multiple={true}
            name="languages"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={true}
            id="quality-indicators"
            label="Quality indicators"
            multiple={true}
            name="qualityIndicators"
            placeholder="Quality indicators"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Grant details"
    >
      <Field
        component={[Function]}
        disableDeleteAllGrants={false}
        disabled={true}
        name="grants"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`Component NtroFields should render contribution statement fields as well 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Creator research statement
            </h3>
            <p>
              For more information about the research statement, click  
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "Author/Creator research statement",
        }
      }
      title="Author/Creator research statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Typography)>
            Select the option that best describes the significance of the work.
          </WithStyles(Typography)>
          <Field
            SelectDisplayProps={
              Object {
                "id": "significance",
              }
            }
            component={[Function]}
            disabled={false}
            label={
              <span>
                Scale/Significance of work* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            name="significance"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="454027"
              value={454027}
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="454026"
              value={454026}
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginTop": 24,
            }
          }
          xs={12}
        >
          <Field
            component={[Function]}
            description="Remember to include substantiation of your major or minor scale/significance claim above."
            disabled={false}
            fullWidth={true}
            maxValue={2000}
            name="impactStatement"
            required={true}
            title={
              <span>
                Creator research statement*. Include Background, Contribution and Significance 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Quality indicators
            </h3>
            <p>
              For more information about each quality indicator option, click 
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836609"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "NTRO data",
        }
      }
      title="NTRO data"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            description="Enter a brief description of the work"
            disabled={false}
            fullWidth={true}
            maxValue={800}
            name="ntroAbstract"
            title={
              <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "Enter ISMN, e.g. 9790720208015",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            inputNormalizer={[Function]}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "Enter ISRC, e.g. US6R21320619",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            floatingLabelText="Series"
            hintText="Enter the name of publication, performance, recording, or event series"
            name="fez_record_search_key_series.rek_series"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="fez_record_search_key_volume_number.rek_volume_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="fez_record_search_key_issue_number.rek_issue_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="fez_record_search_key_start_page.rek_start_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="fez_record_search_key_end_page.rek_end_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-total-pages"
            label="Total pages/Extent"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="fez_record_search_key_original_format.rek_original_format"
            placeholder="Building, Exhibition, Performance, Composition"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            SelectDisplayProps={
              Object {
                "id": "rek-audience-size",
              }
            }
            component={[Function]}
            disabled={false}
            label="Audience size"
            name="fez_record_search_key_audience_size.rek_audience_size"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="453992"
              value={453992}
            >
              Less than 100
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453993"
              value={453993}
            >
              100 - 500
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453994"
              value={453994}
            >
              Greater than 500
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Language"
            multiple={true}
            name="languages"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            id="quality-indicators"
            label="Quality indicators"
            multiple={true}
            name="qualityIndicators"
            placeholder="Quality indicators"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Grant details"
    >
      <Field
        component={[Function]}
        disableDeleteAllGrants={false}
        disabled={false}
        name="grants"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`Component NtroFields should render default view 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Quality indicators
            </h3>
            <p>
              For more information about each quality indicator option, click 
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836609"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "NTRO data",
        }
      }
      title="NTRO data"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            description="Enter a brief description of the work"
            disabled={false}
            fullWidth={true}
            maxValue={800}
            name="ntroAbstract"
            title={
              <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "Enter ISMN, e.g. 9790720208015",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            inputNormalizer={[Function]}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "Enter ISRC, e.g. US6R21320619",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            floatingLabelText="Series"
            hintText="Enter the name of publication, performance, recording, or event series"
            name="fez_record_search_key_series.rek_series"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="fez_record_search_key_volume_number.rek_volume_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="fez_record_search_key_issue_number.rek_issue_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="fez_record_search_key_start_page.rek_start_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="fez_record_search_key_end_page.rek_end_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-total-pages"
            label="Total pages/Extent"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="fez_record_search_key_original_format.rek_original_format"
            placeholder="Building, Exhibition, Performance, Composition"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            SelectDisplayProps={
              Object {
                "id": "rek-audience-size",
              }
            }
            component={[Function]}
            disabled={false}
            label="Audience size"
            name="fez_record_search_key_audience_size.rek_audience_size"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="453992"
              value={453992}
            >
              Less than 100
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453993"
              value={453993}
            >
              100 - 500
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453994"
              value={453994}
            >
              Greater than 500
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Language"
            multiple={true}
            name="languages"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            id="quality-indicators"
            label="Quality indicators"
            multiple={true}
            name="qualityIndicators"
            placeholder="Quality indicators"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Grant details"
    >
      <Field
        component={[Function]}
        disableDeleteAllGrants={false}
        disabled={false}
        name="grants"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`Component NtroFields should render with grants component hidden 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Creator research statement
            </h3>
            <p>
              For more information about the research statement, click  
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "Author/Creator research statement",
        }
      }
      title="Author/Creator research statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Typography)>
            Select the option that best describes the significance of the work.
          </WithStyles(Typography)>
          <Field
            SelectDisplayProps={
              Object {
                "id": "significance",
              }
            }
            component={[Function]}
            disabled={false}
            label={
              <span>
                Scale/Significance of work* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            name="significance"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="454027"
              value={454027}
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="454026"
              value={454026}
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "marginTop": 24,
            }
          }
          xs={12}
        >
          <Field
            component={[Function]}
            description="Remember to include substantiation of your major or minor scale/significance claim above."
            disabled={false}
            fullWidth={true}
            maxValue={2000}
            name="impactStatement"
            required={true}
            title={
              <span>
                Creator research statement*. Include Background, Contribution and Significance 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Quality indicators
            </h3>
            <p>
              For more information about each quality indicator option, click 
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836609"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "NTRO data",
        }
      }
      title="NTRO data"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            description="Enter a brief description of the work"
            disabled={false}
            fullWidth={true}
            maxValue={800}
            name="ntroAbstract"
            title={
              <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "Enter ISMN, e.g. 9790720208015",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            inputNormalizer={[Function]}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "Enter ISRC, e.g. US6R21320619",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            floatingLabelText="Series"
            hintText="Enter the name of publication, performance, recording, or event series"
            name="fez_record_search_key_series.rek_series"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="fez_record_search_key_volume_number.rek_volume_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="fez_record_search_key_issue_number.rek_issue_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="fez_record_search_key_start_page.rek_start_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="fez_record_search_key_end_page.rek_end_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-total-pages"
            label="Total pages/Extent"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="fez_record_search_key_original_format.rek_original_format"
            placeholder="Building, Exhibition, Performance, Composition"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            SelectDisplayProps={
              Object {
                "id": "rek-audience-size",
              }
            }
            component={[Function]}
            disabled={false}
            label="Audience size"
            name="fez_record_search_key_audience_size.rek_audience_size"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="453992"
              value={453992}
            >
              Less than 100
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453993"
              value={453993}
            >
              100 - 500
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453994"
              value={453994}
            >
              Greater than 500
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Language"
            multiple={true}
            name="languages"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            id="quality-indicators"
            label="Quality indicators"
            multiple={true}
            name="qualityIndicators"
            placeholder="Quality indicators"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`Component NtroFields should show significance field even if contribution field isnt empty 1`] = `
<Fragment>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Creator research statement
            </h3>
            <p>
              For more information about the research statement, click  
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836548"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "Author/Creator research statement",
        }
      }
      title="Author/Creator research statement"
    >
      <WithStyles(Grid)
        container={true}
        spacing={8}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Typography)>
            Select the option that best describes the significance of the work.
          </WithStyles(Typography)>
          <Field
            SelectDisplayProps={
              Object {
                "id": "significance",
              }
            }
            component={[Function]}
            disabled={false}
            label={
              <span>
                Scale/Significance of work* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (not for public view)
                </span>
              </span>
            }
            name="significance"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="454027"
              value={454027}
            >
              Minor
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="454026"
              value={454026}
            >
              Major
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      help={
        Object {
          "buttonLabel": "CLOSE",
          "text": <React.Fragment>
            <h3>
              Quality indicators
            </h3>
            <p>
              For more information about each quality indicator option, click 
              <b>
                <a
                  href="https://guides.library.uq.edu.au/for-researchers/uqespace-publications-datasets/ntro-submission-requirements#s-lg-box-20836609"
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                  target="_blank"
                >
                  here
                </a>
              </b>
            </p>
          </React.Fragment>,
          "title": "NTRO data",
        }
      }
      title="NTRO data"
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            description="Enter a brief description of the work"
            disabled={false}
            fullWidth={true}
            maxValue={800}
            name="ntroAbstract"
            title={
              <span>
                Abstract/Description* 
                <span
                  style={
                    Object {
                      "fontWeight": 700,
                    }
                  }
                >
                  (for public view)
                </span>
              </span>
            }
            validate={
              Array [
                [Function],
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISMN
                    </span>,
                    "inputFieldHint": "Enter ISMN, e.g. 9790720208015",
                    "inputFieldLabel": "ISMN value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISMN",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_ismn"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_ismn_order",
                "value": "rek_ismn",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            inputNormalizer={[Function]}
            isValid={[Function]}
            locale={
              Object {
                "form": Object {
                  "locale": Object {
                    "addButtonLabel": <span>
                      Add ISRC
                    </span>,
                    "inputFieldHint": "Enter ISRC, e.g. US6R21320619",
                    "inputFieldLabel": "ISRC value",
                    "remindToAdd": <span>
                      Please press 
                      <b>
                        ENTER
                      </b>
                       or click 
                      <b>
                        ADD
                      </b>
                       button to add this value to the list
                    </span>,
                  },
                },
                "header": Object {
                  "locale": Object {
                    "deleteAll": "Remove all items",
                    "deleteAllConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete all items?",
                      "confirmationTitle": "Delete all",
                    },
                    "nameColumn": "ISRC",
                    "reorderColumn": "Reorder items",
                  },
                },
                "row": Object {
                  "locale": Object {
                    "deleteHint": "Remove this item",
                    "deleteRecordConfirmation": Object {
                      "cancelButtonLabel": "No",
                      "confirmButtonLabel": "Yes",
                      "confirmationMessage": "Are you sure you want to delete this item?",
                      "confirmationTitle": "Delete item",
                    },
                    "moveDownHint": "Move item down the order",
                    "moveUpHint": "Move item up the order",
                  },
                },
              }
            }
            maxCount={5}
            name="fez_record_search_key_isrc"
            remindToAdd={true}
            searchKey={
              Object {
                "order": "rek_isrc_order",
                "value": "rek_isrc",
              }
            }
            transformFunction={[Function]}
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            floatingLabelText="Series"
            hintText="Enter the name of publication, performance, recording, or event series"
            name="fez_record_search_key_series.rek_series"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Volume"
            name="fez_record_search_key_volume_number.rek_volume_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Issue"
            name="fez_record_search_key_issue_number.rek_issue_number"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Start page"
            name="fez_record_search_key_start_page.rek_start_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={3}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="End page"
            name="fez_record_search_key_end_page.rek_end_page"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            id="rek-total-pages"
            label="Total pages/Extent"
            name="fez_record_search_key_total_pages.rek_total_pages"
            placeholder="Enter total pages, size or duration of work"
            required={true}
            type="text"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={6}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            fullWidth={true}
            label="Physical description"
            name="fez_record_search_key_original_format.rek_original_format"
            placeholder="Building, Exhibition, Performance, Composition"
            type="text"
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            SelectDisplayProps={
              Object {
                "id": "rek-audience-size",
              }
            }
            component={[Function]}
            disabled={false}
            label="Audience size"
            name="fez_record_search_key_audience_size.rek_audience_size"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          >
            <WithStyles(MenuItem)
              key="453992"
              value={453992}
            >
              Less than 100
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453993"
              value={453993}
            >
              100 - 500
            </WithStyles(MenuItem)>
            <WithStyles(MenuItem)
              key="453994"
              value={453994}
            >
              Greater than 500
            </WithStyles(MenuItem)>
          </Field>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            label="Language"
            multiple={true}
            name="languages"
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          sm={4}
          xs={12}
        >
          <Field
            component={[Function]}
            disabled={false}
            id="quality-indicators"
            label="Quality indicators"
            multiple={true}
            name="qualityIndicators"
            placeholder="Quality indicators"
            required={true}
            validate={
              Array [
                [Function],
              ]
            }
          />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </StandardCard>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      title="Grant details"
    >
      <Field
        component={[Function]}
        disableDeleteAllGrants={false}
        disabled={false}
        name="grants"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </StandardCard>
  </WithStyles(Grid)>
</Fragment>
`;
